# MedicalSupplyChain

./: .env  .gitignore  README.md  Server.Dockerfile  docker-compose.yml
.github/workflows/: ubuntu_client.yml  ubuntu_server.yml  windows_client.yml  windows_server.yml
client/: Cargo.toml  build.rs
client/src/: client.rs  medical_supplies.rs  medical_supplies_grpc.rs
client/src/gui/: main_window.rs  menu_bar.rs  menu_sidebar.rs  mod.rs
client/src/proto/: medical_supplies.rs  medical_supplies_grpc.rs  mod.rs
messages/: medical_supplies.proto
scripts/: init_db.sql
server/: go.mod  main.go
server/core/: logger.go
server/database/: database.go  equipment.go  users.go
server/proto/: GENERATED_PROTO_FILES  medical_supplies.pb.go  medical_supplies_grpc.pb.go
server/web/: handlers.go
